--- a/henriquepaginahtml.html
+++ b/henriquepaginahtml.html
@@ -8,7 +8,7 @@
 
     <style>
         body{
-            background-color: red;
+            background-color: rgb(16, 161, 137);
         }
 
         .painel{
@@ -24,18 +24,19 @@
         #sim{
             height: 40px;
             width: 60px;
-            background-color: red;
-            border: 2px solid white;
+            background-color: rgb(42, 196, 81);
+            border: 2px solid rgb(3, 1, 1);
             border-radius: 10px;
             color: white;
             margin-left: -50px;
+
         }
         #nao{
             position: absolute;
             height: 40px;
             width: 60px;
-            background-color: red;
-            border: 2px solid white;
+            background-color: rgb(102, 238, 97);
+            border: 2px solid rgb(5, 2, 2);
             border-radius: 10px;
             color: white;
             margin-left: 10px;
